fix: 🐛 set backhground and spacing ofr tablet view  text-image
✅ Closes: #102

--- a/src/components/cms/bnb-cms-partner/styles.scss
+++ b/src/components/cms/bnb-cms-partner/styles.scss
@@ -14,6 +14,11 @@
 		flex-direction: column;
 		@include cmsComponents();
 
+		@include fromBreakpointMax {
+			padding-bottom: 0;
+		}
+
+
 		.partner-container {
 			display: flex;
 			flex-wrap: wrap;
@@ -25,7 +30,7 @@
 
 				@include fromBreakpointL {
 					height: 180px;
-					margin: 50px auto 0 auto;
+					margin: 50px auto 40px auto;
 				}
 			}
 		}
